# Anitrack

./: AGENTS.md  Anitrack.spec  README.md  behavior_test.py  build.py  main.py  pyproject.toml  smoke_test.py
.github/workflows/: ci.yml
app/: main.py
app/config/: __init__.py  app_config.py  settings.py
app/models/: anime.py  library.py
app/services/: anime_service.py  api_client.py  image_cache.py
app/theme/: __init__.py  theme.py
app/ui/: main_window.py  signal_bus.py  workers.py
app/ui/pages/: about_page.py  detail_page.py  home_page.py  list_page.py  settings_page.py
app/ui/widgets/: anime_card.py  base_card.py  character_card.py  recommendation_card.py  relation_card.py  suggestion_card.py  trailer_widget.py
config/: config.json
