[project]
name = "anitrack"
version = "0.1.0"
description = "A desktop app to track the anime you watch, watched and plan to watch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
    "PyQt6>=6.8",
    "PyQt6-Fluent-Widgets[full]>=1.7",
]

[project.scripts]
anitrack = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "loguru>=0.7.3",
    "pyinstaller>=6.20.0",
    "ruff>=0.15.15",
]
